--- a/src/containers/authform/Authform.css
+++ b/src/containers/authform/Authform.css
@@ -1,3 +1,110 @@
 .authform{
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff;
+    border-radius: 5px;
+    border: 1px solid rgba(23,24,26,0.11);
+    box-shadow: 0 0 12px 0 rgba(0,0,0,0.1), 0 10px 30px 0 rgba(0,0,0,0.2);
+    padding: 20px;
+    width: 40%;
 }
+
+.authform h1 {
+    font-size: 3em;
+    margin-bottom: 5px;
+}
+
+.authform hr {
+    width: 50%;
+    height: 3px;
+    border: 0;
+    background: black;
+}
+
+.authform input {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid rgb(204, 204, 204);
+    color: rgb(204, 204, 204);
+    font-size: 16px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+}
+
+.authform button {
+    outline: none;
+    height: 40px;
+    text-align: center;
+    width: 130px;
+    border-radius: 40px;
+    background: #fff;
+    border: 2px solid #1ECD97;
+    color: #1ECD97;
+    letter-spacing: 1px;
+    text-shadow: 0;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.25s ease;
+}
+
+.authform button.login:after {
+    content: "LOGIN"
+}
+
+.authform button.signup:after {
+    content: "SIGN UP"
+}
+
+
+.authform button:hover {
+    color: white;
+    background: #1ECD97;
+}
+
+.loading {
+    width: 40px;
+    border-color: #bbbbbb;
+    border-width: 3px;
+    font-size: 0;
+    border-left-color: #1ECD97;
+    animation: rotating 2s 0.25s linear infinite;
+}
+
+.loading:after {
+    content: "";
+}
+
+.loading:hover {
+    color: #1ECD97;
+    background: white;
+}
+
+.done {
+    font-size: 13px;
+    color: white;
+    background: #1ECD97;
+}
+
+.done:after {
+    font-family: "Font Awesome 5 Free";
+    content: "\f00c";
+  }
+
+@keyframes rotating {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
