--- a/src/containers/companyview/CompanyView.css
+++ b/src/containers/companyview/CompanyView.css
@@ -1,14 +1,21 @@
-.company-view {
+.company-view-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background: #ffffff;
-    border-radius: 5px;
-    border: 1px solid rgba(23,24,26,0.11);
-    box-shadow: 0 0 12px 0 rgba(0,0,0,0.1), 0 10px 30px 0 rgba(0,0,0,0.2);
-    padding: 20px;
-    width: 80%;
-    height: 85%;
+    align-items: flex-start;
+    width: 90%;
+    height: 100%;
     overflow: auto;
+    position: relative;
+}
+
+.company-view {
+    height: 100%;
+    width: 100%;
+}
+
+.company-view h1 {
+    height: 10%;
+    text-decoration: underline;
+    width: 100%;
 }
