--- a/src/containers/companyview/CompanyView.css
+++ b/src/containers/companyview/CompanyView.css
@@ -19,3 +19,27 @@
     text-decoration: underline;
     width: 100%;
 }
+
+
+.company-view-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.company-view-header button {
+    outline: none;
+    height: 40px;
+    text-align: center;
+    width: 130px;
+    border-radius: 40px;
+    background: #1ECD97;
+    border: 0;
+    color: #fff;
+    letter-spacing: 1px;
+    text-shadow: 0;
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 20px;
+    box-shadow: 0px 2px 5px #666;
+}
