--- a/src/components/styles/ProjectList.css
+++ b/src/components/styles/ProjectList.css
@@ -1,6 +1,18 @@
 .project-list {
     width: 90%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 20px;
+}
+
+.project-list thead tr th {
+    padding: 20px;
+    border-bottom: 1px solid #e6e8eb;
+}
+
+.project-list tbody {
+    line-height: 1.5;
+}
+
+.project-list tbody tr td {
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
