--- a/src/components/styles/ProjectListItem.css
+++ b/src/components/styles/ProjectListItem.css
@@ -1,10 +1,11 @@
 .project-list-item{
-    background: #ffffff;
-    border-radius: 5px;
-    border: 1px solid rgba(23,24,26,0.11);
-    box-shadow: 0 0 12px 0 rgba(0,0,0,0.1), 0 10px 30px 0 rgba(0,0,0,0.2);
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    width: 100%;
+    padding: 2rem;
+    
+}
+
+
+
+.project-list-item td {
+    font-weight: 600;
+    border-bottom: 1px solid #e6e8eb;
 }
