--- a/src/containers/projectview/ProjectView.css
+++ b/src/containers/projectview/ProjectView.css
@@ -1,7 +1,13 @@
 .project-view {
-    height: 90%;
-    width: 100%;
+    margin-top: 5%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid rgba(23,24,26,0.11);
+    box-shadow:0 0 12px 0 rgba(0,0,0,0.1);
+    padding-left: 5%;
+    padding-right: 5%;
 }
