transition gradient to navbar

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -5,4 +5,10 @@
     flex-direction: row;
     align-items: center;
     height: 10%;
+    transition: background-color .5s 1s;
+}
+
+
+.navbar.authed {
+    background-color: #B71C1C;
 }
