--- a/src/containers/companyview/CompanyView.css
+++ b/src/containers/companyview/CompanyView.css
@@ -25,10 +25,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid rgba(23,24,26,0.11);
-    box-shadow: 0 0 12px 0 rgba(0,0,0,0.1);
+    border-bottom: 1px solid #000000;
     padding-left: 5%;
     padding-right: 5%;
 }
