--- a/src/components/styles/ProjectListItem.css
+++ b/src/components/styles/ProjectListItem.css
@@ -1,11 +1,11 @@
-.project-list-item{
+.follower-list-item{
     padding: 2rem;
     
 }
 
 
 
-.project-list-item td {
+.follower-list-item td {
     font-weight: 600;
     border-bottom: 1px solid #e6e8eb;
 }
