--- a/src/containers/content/Content.css
+++ b/src/containers/content/Content.css
@@ -1,6 +1,6 @@
 .content {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 90%;
 }
