--- a/src/containers/followerslist/FollowersList.css
+++ b/src/containers/followerslist/FollowersList.css
@@ -24,3 +24,10 @@
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+.follower-view h4 {
+    margin-top: 20px;
+    margin-bottom: 0;
+    width: 90%;
+    text-align: start;
+}
