contact search styles

--- a/src/components/styles/FollowerForm.css
+++ b/src/components/styles/FollowerForm.css
@@ -5,6 +5,36 @@
     position: relative;
 }
 
+.ui.search {
+    width: 100%;
+}
+
+.results {
+    position: absolute;
+    top:100%;
+    left: 0;
+    transform-origin: center top;
+    white-space: normal;
+    background: #ffffff;
+    /* margin-top: .5em; */
+    width: 100%;
+    /* border-radius: 0.3rem; */
+    /* box-shadow: 0 2px 4px 0 rgba(34,36,38,.12), 0 2px 10px 0 rgba(34,36,38,.15); */
+    border: 1px solid #d4d4d5;
+    z-index: 998;
+}
+
+.result {
+    cursor: pointer;
+    display: block;
+    overflow: hidden;
+    font-size: 1em;
+    padding: .85em 1.15em;
+    color: rgba(0,0,0,.87);
+    line-height: 1.33;
+    border-bottom: 1px solid rgba(34,36,38,.1);
+}
+
 .follower-form input {
     background: transparent;
     border: none;
@@ -13,7 +43,7 @@
     margin-left: 0;
     margin-right: 0;
     margin-top: 10px;
-    margin-bottom: 20px;
+    
     padding-top: 13px;
     padding-bottom: 13px;
     padding-left: 0;
@@ -23,9 +53,10 @@
 }
 
 .follower-form button {
-    position: relative;
+    position: absolute;
     width: 30px;
     height: 30px;
+    top: 10px;
     right: 30px;
     border-radius: 5px;
     border: 0;
