--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -10,6 +10,6 @@
 
 
 .navbar.authed {
-    transition: background-color .5s 1s;
+    transition: background-color 1s;
     background-color: #B71C1C;
 }
