--- a/src/components/styles/ProjectForm.css
+++ b/src/components/styles/ProjectForm.css
@@ -1,11 +1,9 @@
-.user-form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 70%;
+.project-form {
+    width: 100%;
+
 }
 
-.user-form input {
+.project-form input {
     background: transparent;
     border: none;
     border-bottom: 1px solid rgb(204, 204, 204);
@@ -20,7 +18,8 @@
     padding-right: 0;
     width: 100%;
 }
-.user-form button {
+
+.project-form button {
     outline: none;
     height: 40px;
     text-align: center;
