--- a/src/components/styles/ProjectListItem.css
+++ b/src/components/styles/ProjectListItem.css
@@ -3,9 +3,11 @@
     
 }
 
-
-
 .follower-list-item td {
     font-weight: 600;
     border-bottom: 1px solid #e6e8eb;
+}
+
+tr.follower-list-item td a {
+    color: black;
 }
