--- a/src/containers/projectdetail/ProjectDetail.css
+++ b/src/containers/projectdetail/ProjectDetail.css
@@ -17,3 +17,59 @@
     display: flex;
     flex-direction: column;
 }
+
+.project-detail-header-right button {
+    outline: none;
+    
+    text-align: center;
+    width: fit-content;
+    border-radius: 40px;
+    background: #1976D2;
+    border: 1px solid rgba(23,24,26,0.5);
+    color: #fff;
+    letter-spacing: 1px;
+    text-shadow: 0;
+    font-weight: bold;
+    font-size: 15px;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    padding: 10px 20px;
+}
+
+.project-detail-header-right button:hover {
+    opacity: 0.8;
+}
+
+.row {
+    width: 100%;
+}
+
+.row button {
+    outline: none;
+    height: 40px;
+    text-align: center;
+    width: fit-content;
+    border-radius: 40px;
+    background: #FF0000CC;
+    border: 2px solid #FF0000CC;
+    color: #ffffff;
+    letter-spacing: 1px;
+    text-shadow: 0;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    margin: 20px auto;
+    padding: 10px;
+}
+
+.project-detail-header-left h1 {
+    font-size: 3em;
+    width: fit-content;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.date {
+    padding-top: 0;
+}
