--- a/src/components/styles/UserForm.css
+++ b/src/components/styles/UserForm.css
@@ -36,3 +36,13 @@
     cursor: pointer;
     transition: all 0.25s ease;
 }
+
+.success {
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #1ECD97;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
